@@ -40,7 +40,9 @@ namespace KIO {
 class DiscogsFetcherTest;
 
 namespace Tellico {
-
+  namespace GUI {
+    class ComboBox;
+  }
   namespace Fetch {
 
 /**
@@ -84,6 +86,7 @@ public:
     virtual QString preferredName() const override;
   private:
     QLineEdit* m_apiKeyEdit;
+    GUI::ComboBox* m_imageCombo;
   };
   friend class ConfigWidget;
 
@@ -102,6 +105,14 @@ private:
 
   int m_limit;
   bool m_started;
+
+  enum ImageSize {
+    SmallImage=0, // small is really the thumb size
+    MediumImage=1, // there's no medium really, but keep enum for consistency
+    LargeImage=2,
+    NoImage=3
+  };
+  ImageSize m_imageSize;
 
   QString m_apiKey;
   int m_page;
